--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "mysql2": "^3.14.1",
     "passport": "^0.7.0",
